--- a/app/templates/dictionary.html
+++ b/app/templates/dictionary.html
@@ -1,6 +1,6 @@
-{% from "super_navpanel.html" import super_navpanel %}
-{% from "flash_alert.html" import flash_alert %}
-{% from "dictionary_entry.html" import dictionary_entry %}
+{% from "misc/super_navpanel.html" import super_navpanel %}
+{% from "misc/flash_alert.html" import flash_alert %}
+{% from "subcomponents/dictionary_entry.html" import dictionary_entry %}
 
 {% extends 'general_layout.html' %}
 {% block content %}
