--- a/app/templates/dictionary_edit.html
+++ b/app/templates/dictionary_edit.html
@@ -1,5 +1,5 @@
-{% from "super_navpanel.html" import super_navpanel %}
-{% from "flash_alert.html" import flash_alert %}
+{% from "misc/super_navpanel.html" import super_navpanel %}
+{% from "misc/flash_alert.html" import flash_alert %}
 {% from "modals/discard_dict_changes.html" import discard_dict_changes %}
 
 {% extends 'general_layout.html' %}
