--- a/app/templates/series_toc.html
+++ b/app/templates/series_toc.html
@@ -1,5 +1,5 @@
-{% from "super_navpanel.html" import super_navpanel %}
-{% from "flash_alert.html" import flash_alert %}
+{% from "misc/super_navpanel.html" import super_navpanel %}
+{% from "misc/flash_alert.html" import flash_alert %}
 
 {% extends 'general_layout.html' %}
 {% block content %}
