--- a/app/templates/dictionary_edit.html
+++ b/app/templates/dictionary_edit.html
@@ -5,7 +5,7 @@
 {% extends 'general_layout.html' %}
 {% block content %}
 	<section class="section_dictionary_edit">
-		<!-- Back button -->
+		<!-- Navigation bar -->
 		{% if back_href is defined %}
 			{{super_navpanel(back_href)}}
 		{% endif%}
