General progress towards completion of /honorifics
- Added individual toggle and toggle all functionality for honorific entries

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -1312,6 +1312,9 @@ table.entry_info_table{
   display: flex;
   margin: 1px;
 }
+.honorific_entry_disabled{
+  filter: grayscale(1);
+}
 .honorific_entry:hover{
   outline: 1px dashed var(--honorifics_color_primary);
 }
