--- a/app/templates/honorifics.html
+++ b/app/templates/honorifics.html
@@ -20,7 +20,8 @@
 		<div class="honorifics_body">
 			<div class="superpanel" id="honorifics_superpanel">
 				<!-- Toggle All button -->
-				<button type="button" class="btn btn-unique superpanel_menu_btn" id="menu_honorifics_toggleall_btn" title="Toggle all honorifics">
+				<button type="button" class="btn btn-unique superpanel_menu_btn" id="menu_honorifics_toggleall_btn" title="Toggle all honorifics"
+				action="{{url_for('honorifics_toggleall', enable='on')}}" {{'disabled' if honorifics|length == 0}} style="float: right;">
 					<ion-icon name="toggle"></ion-icon>
 					<span> Toggle All </span>
 				</button>
@@ -67,3 +68,9 @@
 
 	</section>
 {% endblock %}
+
+{% block script_area %}
+	$(document).ready(function() {
+		setupHonorifics();
+	});
+{% endblock%}
