--- a/app/templates/modals/discard_dict_changes.html
+++ b/app/templates/modals/discard_dict_changes.html
@@ -1,6 +1,5 @@
 {% macro discard_dict_changes() %}
-<div class="modal fade" id="dict_discard_changes_modal" tabindex="-1" role="dialog" aria-labelledby="discardConfirmationModal"
-    aria-hidden="true">
+<div class="modal fade" id="dict_discard_changes_modal" tabindex="-1" role="dialog" aria-labelledby="discardConfirmationModal" aria-hidden="true">
     <!-- Add .modal-dialog-centered to .modal-dialog to vertically center the modal -->
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
