--- a/app/templates/honorifics.html
+++ b/app/templates/honorifics.html
@@ -2,6 +2,8 @@
 {% from "misc/flash_alert.html" import flash_alert %}
 {% from "subcomponents/honorific_entry.html" import honorific_entry %}
 {% from "modals/add_honorific.html" import add_honorific_modal %}
+{% from "modals/edit_honorific.html" import edit_honorific_modal %}
+{% from "modals/remove_honorific.html" import remove_honorific_modal %}
 
 {% extends 'general_layout.html' %}
 {% block content %}
@@ -13,6 +15,8 @@
 
 		<!-- Set up the modals needed for this  -->
 		{{ add_honorific_modal(add_form) }}
+		{{ edit_honorific_modal(edit_form) }}
+		{{ remove_honorific_modal() }}
 
 		<!-- Main content -->
 		<div class="banner" id="honorifics_banner">
@@ -30,7 +34,7 @@
 					<span> Toggle All </span>
 				</button>
 				<!-- Add Honorific button -->
-				<button type="button" class="btn mdb-color lighten-1 superpanel_menu_btn modal_trigger" id="menu_honorifics_add_btn" data-toggle="modal" data-target="#add_honorific_modal_push" title="Add honorific">
+				<button type="button" class="btn light-green superpanel_menu_btn modal_trigger" id="menu_honorifics_add_btn" data-toggle="modal" data-target="#add_honorific_modal_push" title="Add honorific">
 					<ion-icon name="add-outline"></ion-icon>
 					<span> Add Honorific </span>
 				</button>
@@ -62,27 +66,29 @@
 						</div>
 					</div>
 				{% else %}
-					{% set jp_hdr = namespace(visible=false) %}
-					{% set cn_hdr = namespace(visible=false) %}
-					{% for honorific in honorifics %}
-						<!-- Japanese honorifics -->
-						{% if honorific.lang.value == 1 %}
-							{% if jp_hdr.visible is not sameas true %}
-							<div class="honorifics_lang_div jp_lang_div"> Japanese </div>
-							{% set jp_hdr.visible = true %}
-							{% endif %}
-							{{ honorific_entry(honorific, "jp") }}
-						{% endif %}
+					<!-- Japanese honorifics -->
+					<div class="honorifics_lang_div jp_lang_div"> Japanese </div>
+					<div style="overflow-y: hidden;">
+						<div class="honorifics_lang_content jp_lang_content">
+							{% for honorific in honorifics %}
+								{% if honorific.lang.value == 1 %}
+									{{ honorific_entry(honorific, "jp") }}
+								{% endif %}
+							{% endfor %}
+						</div>
+					</div>
 
-						<!-- Chinese honorifics -->
-						{% if honorific.lang.value == 2 %}
-							{% if cn_hdr.visible is not sameas true %}
-							<div class="honorifics_lang_div cn_lang_div"> Chinese </div>
-							{% set cn_hdr.visible = true %}
-							{% endif %}
-							{{ honorific_entry(honorific, "cn") }}
-						{% endif %}
-					{% endfor %}
+					<!-- Chinese honorifics -->
+					<div class="honorifics_lang_div cn_lang_div"> Chinese </div>
+					<div style="overflow-y: hidden;">
+						<div class="honorifics_lang_content cn_lang_content">
+							{% for honorific in honorifics %}
+								{% if honorific.lang.value == 2 %}
+									{{ honorific_entry(honorific, "cn") }}
+								{% endif %}
+							{% endfor %}
+						</div>
+					</div>
 				{% endif %}
 			</div>
 		</div>
