--- a/app/templates/subcomponents/honorific_entry.html
+++ b/app/templates/subcomponents/honorific_entry.html
@@ -1,9 +1,14 @@
 {% macro honorific_entry(honorific, lang) %}
 	<div class="honorific_entry honorific_entry_{{lang}} {{'honorific_entry_disabled' if not honorific.enabled}}" id="honorific_{{honorific.id}}"
 		data-id="{{honorific.id}}"
-		data-raw="{{honorific.raw}}"
 		data-lang="{{lang}}"
-		data-trans="{{honorific.trans}}">
+		data-lang-val="{{honorific.lang.value}}"
+		data-hraw="{{honorific.raw}}"
+		data-htrans="{{honorific.trans}}"
+		data-affix="{{honorific.affix}}"
+		data-affix-val="{{honorific.affix.value}}"
+		data-opt-with-dash="{{honorific.opt_with_dash}}"
+		data-opt-standalone="{{honorific.opt_standalone}}">
 		<div class="honorific_entry_enable_div action_toggle_enable"
 			title="Enable/Disable honorific"
 			action="{{url_for('honorifics_toggle_entry', hon_id=honorific.id)}}">
@@ -22,7 +27,7 @@
 					</button>
 				</div>
 				<div class="honorific_entry_action_div honorific_entry_trash">
-					<button type="button" class="entry_action_button modal_trigger" data-toggle="modal" data-target="#remove_honorific_modal_push" title="Delete Honorific" id="rmv_{{honorific.id}}">
+					<button type="button" class="entry_action_button modal_trigger" data-toggle="modal" data-target="#remove_honorific_modal" title="Delete Honorific" id="rmv_{{honorific.id}}">
 						<ion-icon name="trash"></ion-icon>
 					</button>
 				</div>
