--- a/app/templates/modals/edit_novel.html
+++ b/app/templates/modals/edit_novel.html
@@ -2,7 +2,7 @@
 <div class="modal fade" id="edit_modal_push" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg modal-notify modal-info" role="document">
     <!-- Modal Form Content-->
-    <form class="modal-content text-center modal_cust edit_modal_cust" id="edit_novel_form" action="{{ url_for('library_edit_novel', series_code='UNDEF') }}">
+    <form class="modal-content text-center modal_cust edit_modal_cust" id="edit_novel_form" action="{{ url_for('library_edit_novel', series_id='UNDEF') }}">
       <!--Modal Header-->
       <div class="modal-header modal_header_cust d-flex justify-content-center" id="edit_novel_header">
         <p style="margin: 0.5rem 0"> Edit this Novel </p>
@@ -11,6 +11,7 @@
       <!--Modal Body-->
       <div class="modal-body modal_body_cust">
           {{ form.hidden_tag() }}
+          {{ form.series_id }}
           <fieldset class="form-group" style="margin: 0">
             <div class="form-group form_group_cust">
               {{ form.title.label(class="form-control-label label_cust") }}
