Minor visual enhancements
- Adjusted colors in /honorifics
- Added honorifics button to the super navpanel
- Minor tweaks to honorifics processing in backend
- Added div displaying series abbreviation in series table of contents library/series_toc/ route
- Bug fix: Fixed broken next and prev chapter buttons in chapter/ route
- Added series progression display in chapter/ route
- Minor refactoring of backend code and QOL changes

--- a/app/templates/honorifics.html
+++ b/app/templates/honorifics.html
@@ -28,7 +28,7 @@
 		<div class="honorifics_body">
 			<div class="superpanel" id="honorifics_superpanel">
 				<!-- Toggle All button -->
-				<button type="button" class="btn btn-unique superpanel_menu_btn" id="menu_honorifics_toggleall_btn" title="Toggle all honorifics"
+				<button type="button" class="btn mdb-color darken-1 superpanel_menu_btn" id="menu_honorifics_toggleall_btn" title="Toggle all honorifics"
 				action="{{url_for('honorifics_toggleall', enable='on')}}" {{'disabled' if honorifics|length == 0}} style="float: right;">
 					<ion-icon name="toggle"></ion-icon>
 					<span> Toggle All </span>
