--- a/app/templates/modals/remove_honorific.html
+++ b/app/templates/modals/remove_honorific.html
@@ -1,5 +1,5 @@
 {% macro remove_honorific_modal() %}
-<div class="modal fade" id="remove_honorific_modal" tabindex="-1" role="dialog" aria-labelledby="discardConfirmationModal" aria-hidden="true" action="{{url_for('honorifics_remove_entry', hon_id='UNDEF')}}" data-hraw="" data-htrans="">
+<div class="modal fade" id="remove_honorific_modal" tabindex="-1" role="dialog" aria-labelledby="discardConfirmationModal" aria-hidden="true" action="{{url_for('honorifics_remove_entry', hon_id=0)}}" data-hraw="" data-htrans="">
     <!-- Add .modal-dialog-centered to .modal-dialog to vertically center the modal -->
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
