--- a/app/templates/series_toc.html
+++ b/app/templates/series_toc.html
@@ -11,6 +11,9 @@
 
 		<!-- Main content -->
 		<div class="toc_header">
+			<div class="toc_series_abbr_div">
+				{{ series.abbr }}
+			</div>
 			<div class="toc_series_title_div" onclick="window.open('{{series_url}}');">
 				<span style="cursor: pointer;"> {{series.title}} </span>
 			</div>
