--- a/app/static/main.css
+++ b/app/static/main.css
@@ -49,8 +49,7 @@ html{
   --dictionary_edit_color_primary: #ff702c;
 
   /* Honorifics palette */
-  --honorifics_color_primary: #ce227d;
-  --honorifics_color_primary_dark: #880e4f;
+  --honorifics_color_primary: #880e4f;
   --honorifics_jp_color: #ce225b;
   --honorifics_cn_color: #226fce;
 }
@@ -404,6 +403,9 @@ ion-icon .icon-inner{
 #super_navpanel_dictionary_btn{
   background: var(--dictionary_color_primary);
 }
+#super_navpanel_honorifics_btn{
+  background: var(--honorifics_color_primary);
+}
 #super_navpanel_back_btn{
   padding: 0.5rem 3rem;
   margin-left: 1.5rem;
@@ -556,6 +558,9 @@ ion-icon .icon-inner{
 }
 .library_update_progress_bar_info{
   margin: 0 0.5rem;
+}
+#update_progress_bar{
+  transition: 0.4s;
 }
 #update_info_series{
   margin: 1rem;
@@ -755,12 +760,22 @@ table.entry_info_table{
   padding: 0 4rem;
   margin-bottom: 3rem;
 }
+.toc_series_abbr_div{
+  width: fit-content;
+  color: #fff;
+  background: #8e2525;
+  margin: 1rem auto;
+  padding: 0.5rem 2rem;
+  font-variant: all-petite-caps;
+  font-size: 1.1rem;
+  border-radius: 0.5rem;
+}
 .toc_series_title_div{
+  color: #8e2525;
   font-variant: petite-caps;
   font-size: 3rem;
   text-align: center;
   line-height: 3.5rem;
-  color: #dc6060;
 }
 
 .toc_body{
@@ -880,6 +895,16 @@ table.entry_info_table{
 }
 .chapter_toolbelt_btn:hover{
   filter: brightness(1.3);
+}
+.series_progress{
+  width: fit-content;
+  color: var(--chapter_maintxt_color);
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+  font-size: 1.3rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid var(--chapter_maintxt_color);
 }
 .content_title_div{
   border-top: 1px solid #9a9a9a;
@@ -1370,11 +1395,9 @@ table.entry_info_table{
 }
 .honorific_span{
   font-size: 1.2rem;
-  /*color: var(--honorifics_color_primary_dark);*/
 }
 .honorific_entry_action_bar{
   display: flex;
-  /*color: var(--honorifics_color_primary_dark);*/
   font-size: 1.3rem;
   margin: auto 1rem;
   opacity: 0;
