--- a/app/templates/modals/edit_honorific.html
+++ b/app/templates/modals/edit_honorific.html
@@ -2,7 +2,7 @@
 <div class="modal fade" id="edit_honorific_modal_push" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg modal-notify modal-info" role="document">
     <!-- Modal Form Content-->
-    <form class="modal-content text-center modal_cust edit_honorific_modal_cust" id="edit_honorific_form" action="{{ url_for('honorifics_edit_entry', hon_id='UNDEF') }}">
+    <form class="modal-content text-center modal_cust edit_honorific_modal_cust" id="edit_honorific_form" action="{{ url_for('honorifics_edit_entry', hon_id=0) }}">
       <!--Modal Header-->
       <div class="modal-header modal_header_cust deep-purple darken-3 d-flex justify-content-center" id="edit_honorific_header">
         <p style="margin: 0.5rem 0"> Edit Honorific </p>
