Feature: Day/Night toggle for dictionaries_edit/ complete
- Implemented Day/Night mode in dicitonary_edit/ route
- Changed dicitonary edit CodeMirror to use sublime key mapping and added some extra addon features
- Slight changes to app db initialization procedure and app config

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -47,6 +47,10 @@ html{
 
   /* Dictionary edit palette */
   --dictionary_edit_color_primary: #ff702c;
+  --dictionary_edit_day_night_toggle_btn_color: #572a80;
+  --dictionary_edit_codemirror_bg_color: white;
+  --dictionary_edit_codemirror_text_color: black;
+  --dictionary_edit_codemirror_gutter_color: #f7f7f7;
 
   /* Honorifics palette */
   --honorifics_color_primary: #880e4f;
@@ -55,11 +59,19 @@ html{
 }
 html[data-theme='dark']{
   --html_background_color: #181818;
+
+  /* Chapter dark palette */
   --chapter_maintxt_color: #d0d0d0;
   --chapter_subtxt_color: #505050;
   --chapter_day_night_toggle_btn_color: #bea140;
   --chapter_scroll_bar_color: white;
   --chapter_word_color: #ffd000;
+
+  /* Dictionary editor dark palette */
+  --dictionary_edit_day_night_toggle_btn_color: #bea140;
+  --dictionary_edit_codemirror_bg_color: #202020;
+  --dictionary_edit_codemirror_text_color: white;
+  --dictionary_edit_codemirror_gutter_color: #292929;
 }
 html.transition,
 html.transition *,
@@ -1203,10 +1215,20 @@ table.entry_info_table{
   top: 0;
   left: 0;
   padding: 1rem;
-  background: white;
+}
+.CodeMirror-scroll{
+  background: var(--dictionary_edit_codemirror_bg_color);
+  color: var(--dictionary_edit_codemirror_text_color);
+}
+.CodeMirror-gutters{
+  background: var(--dictionary_edit_codemirror_gutter_color) !important;
+  border: none !important;
 }
 .fullscreen .CodeMirror{
   height: 100% !important;
+}
+#menu_dictionary_edit_day_night_toggle_btn{
+  background: var(--dictionary_edit_day_night_toggle_btn_color);
 }
 #dictionary_edit_icon{
   background: var(--dictionary_edit_color_primary);
