--- a/app/templates/dictionary_edit.html
+++ b/app/templates/dictionary_edit.html
@@ -43,6 +43,10 @@
 							<ion-icon name="close-outline"></ion-icon>
 							<span> Discard </span>
 						</button>
+						<button type="button" class="btn dictionary_edit_toolbelt_btn" title="Day/Night mode"
+							id="menu_dictionary_edit_day_night_toggle_btn" >
+							<ion-icon name="moon-outline"></ion-icon>
+						</button>
 						<button type="button" class="btn btn-elegant dictionary_edit_toolbelt_btn" title="Toggle fullscreen"
 							id="menu_dictionary_edit_fullscreen_btn" >
 							<ion-icon name="scan-outline"></ion-icon>
