--- a/app/templates/general_layout.html
+++ b/app/templates/general_layout.html
@@ -16,7 +16,7 @@
 	<!-- Material Design Bootstrap -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 	<!-- Code Mirror -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/codemirror.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.3/codemirror.min.css" integrity="sha512-xIf9AdJauwKIVtrVRZ0i4nHP61Ogx9fSRAkCLecmE2dL/U8ioWpDvFCAy4dcfecN72HHB9+7FfQj3aiO68aaaw==" crossorigin="anonymous" />
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -52,9 +52,12 @@
 	<!-- File Saver -->
 	<script src="https://cdn.rawgit.com/eligrey/FileSaver.js/5ed507ef8aa53d8ecfea96d96bc7214cd2476fd2/FileSaver.min.js"></script>
 	<!-- Code Mirror -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/codemirror.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.57.0/addon/mode/simple.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.57.0/addon/edit/closebrackets.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.3/codemirror.min.js" integrity="sha512-zuvaVNiXwWY7U7HEdXsoTislTEElpKLELFoyQw0Bg7zfGhC4vG8eAhCxIQAvHmprW7dFhTq5zshUko4K3B4mSA==" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.3/addon/mode/simple.min.js" integrity="sha512-LHMXt9MP5dNaw+AnqAuxPnO2vVlaDnwPOHoGjiqj78RS0vySPYUKAYLkyR5xhtGJTFhCJ7z/wcA34umuCf1zhQ==" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.3/addon/edit/closebrackets.min.js" integrity="sha512-B+mNfayB2LLir8I9Dy+0F2JTkRB9JxNC6+lHRo48ni7MRNe/U6pH7JfDy8zuI28AHYKMHi7/nylf3rOEGl9HFA==" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.3/addon/edit/matchbrackets.min.js" integrity="sha512-GlBJlDrIKL93TzLT5WYpPw9wRicOOghofNDodqg9WXPyLLFFb4RSERKonID8LLs6GpCCgXCbEGIraojzI+ngPA==" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.3/addon/search/searchcursor.min.js" integrity="sha512-WjPtMaVG4q6cJDk6ErkkZt87NQ8NAyk35hoBbylGAnNTiDara/vHlpGKCdhXFwBFQ26nRpyW7cNmv0tKVLE6ww==" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.3/keymap/sublime.min.js" integrity="sha512-Z2h8JV7HR8dsltSOC7rrvVvvxHGj6cNvDDA3AJO99Nzvx5h28qT3KjqmwblYIGm/tEv319Cb+pORlgCnYADqYQ==" crossorigin="anonymous"></script>
 
 	<!-- Main Javascript -->
 	<script type="text/javascript" src="{{ url_for('static', filename='wn_customtrans.js') }}"></script>
