--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 			<img class="customtrans_logo" src="{{url_for('static', filename='customtrans_logo.png')}}"/>
 		</div>
 		<div class="menu_div">
-			<div style="padding: 1rem; width: 50%;">
+			<div style="padding: 1rem; ">
 				<div class="menu_button menu_button_big" id="menu_library" onclick="location.href='{{url_for('library')}}';">
 					<div class="button_icon">
 						<ion-icon name="book"></ion-icon>
@@ -13,7 +13,7 @@
 					<div class="button_title"> Library </div>
 				</div>
 			</div>
-			<div style="display: flex; flex-direction: column; width: 50%;">
+			<div style="display: flex; flex-direction: column; ">
 				<div style="padding: 1rem;">
 					<div class="menu_button menu_button_wide" id="menu_dictionaries" onclick="location.href='{{url_for('dictionaries')}}';">
 						<div class="button_icon">
@@ -22,8 +22,8 @@
 						<div class="button_title"> Dictionaries </div>
 					</div>
 				</div>
-				<div style="display: flex; width: 100%">
-					<div style="padding: 1rem; width: 50%;">
+				<div style="display: flex;">
+					<div style="padding: 1rem; ">
 						<div class="menu_button menu_button_small" id="menu_tutorial" onclick="location.href='{{url_for('tutorial')}}';">
 							<div class="button_icon">
 								<ion-icon name="help"></ion-icon>
@@ -31,7 +31,7 @@
 							<div class="button_title"> Tutorial </div>
 						</div>
 					</div>
-					<div style="padding: 1rem; width: 50%;">
+					<div style="padding: 1rem; ">
 						<div class="menu_button menu_button_small" id="menu_settings" onclick="location.href='{{url_for('settings')}}';">
 							<div class="button_icon">
 								<ion-icon name="settings"></ion-icon>
